<resources>
    <string name="app_name">ElevatorHelper</string>
    <string name="count_down_animation">Count down Animation</string>
    <string name="cont_down_second">3</string>
    <string name="welcome_using">欢迎使用</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">主页面</string>
    <string name="title_dashboard">故障报修</string>
    <string name="title_notifications">我</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">输入内容不符合规则</string>
    <string name="invalid_password">密码至少需要6位</string>
    <string name="login_failed">"登录失败"</string>
    <string name="require_username_or_phone">请输入用户名或电话号码</string>
    <string name="comments">情况描述</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="not_login">您未登录！</string>
    <string name="go_login">去登录</string>
    <string name="please_login_first">请您先登录在进行操作！</string>
    <string name="cancel">取消</string>
</resources>