<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/welcome_using" />

    <ImageView
        android:id="@+id/loader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_loading"
        android:contentDescription="@string/count_down_animation" />

    <TextView
        android:id="@+id/downcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:text="@string/cont_down_second"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>